fix: blur distortion to cross browser

--- a/assets/styles/eveBook/IntroModule/style.less
+++ b/assets/styles/eveBook/IntroModule/style.less
@@ -12,7 +12,7 @@
 	}
 	#logo {
 		height: 350px;
-		filter: blur(35px);
+		filter: blur(15px);
 		opacity: 0;
 		margin: 0;
 		flex:3;
@@ -21,6 +21,7 @@
   	flex-direction: column;
 		&.visible {
 			filter: blur(0);
+			opacity: 1;
 		}
 		img {
 			margin: 0 auto;		
